--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=financialmanager
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_NAME}
 spring.datasource.password=${DATABASE_PASSWORD}
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.flyway.baseline-on-migrate=true
 springdoc.swagger-ui.path=/swagger-ui.html
