--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.4.4'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'jacoco'
 }
 
 group = 'com.tech.padawan'
@@ -40,6 +41,56 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'
 }
 
-tasks.named('test') {
+//tasks.named('test') {
+//	useJUnitPlatform()
+//}
+//
+//
+//test {
+//	testLogging {
+//		events "failed", "skipped"
+//		exceptionFormat "full"
+//		showStandardStreams = true
+//	}
+//
+//	afterTest { desc, result ->
+//		if (!desc.className.equals(desc.displayName)) return
+//		println "Executed test class: ${desc.className} - Result: ${result.resultType}"
+//	}
+//
+//	afterSuite { desc, result ->
+//		if (!desc.parent) {
+//			println "\n==== TEST SUMMARY ===="
+//			println "Total tests: ${result.testCount}"
+//			println "Passed     : ${result.successfulTestCount}"
+//			println "Failed     : ${result.failedTestCount}"
+//			println "Skipped    : ${result.skippedTestCount}"
+//			println "======================"
+//		}
+//	}
+//}
+
+test{
 	useJUnitPlatform()
+	finalizedBy jacocoTestReport
+}
+
+jacoco{
+	toolVersion = "0.8.7"
+}
+
+test {
+	jacoco{
+		enabled = true
+	}
+}
+
+jacocoTestCoverageVerification{
+	violationRules{
+		rule{
+			limit{
+				minimum = 0.8
+			}
+		}
+	}
 }
