--- a/build.gradle
+++ b/build.gradle
@@ -41,38 +41,35 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'
 }
 
-//tasks.named('test') {
-//	useJUnitPlatform()
-//}
-//
-//
-//test {
-//	testLogging {
-//		events "failed", "skipped"
-//		exceptionFormat "full"
-//		showStandardStreams = true
-//	}
-//
-//	afterTest { desc, result ->
-//		if (!desc.className.equals(desc.displayName)) return
-//		println "Executed test class: ${desc.className} - Result: ${result.resultType}"
-//	}
-//
-//	afterSuite { desc, result ->
-//		if (!desc.parent) {
-//			println "\n==== TEST SUMMARY ===="
-//			println "Total tests: ${result.testCount}"
-//			println "Passed     : ${result.successfulTestCount}"
-//			println "Failed     : ${result.failedTestCount}"
-//			println "Skipped    : ${result.skippedTestCount}"
-//			println "======================"
-//		}
-//	}
-//}
+tasks.named('test') {
+	useJUnitPlatform()
+}
+
 
 test{
 	useJUnitPlatform()
 	finalizedBy jacocoTestReport
+	testLogging {
+		events "failed", "skipped"
+		exceptionFormat "full"
+		showStandardStreams = true
+	}
+
+	afterTest { desc, result ->
+		if (!desc.className.equals(desc.displayName)) return
+		println "Executed test class: ${desc.className} - Result: ${result.resultType}"
+	}
+
+	afterSuite { desc, result ->
+		if (!desc.parent) {
+			println "\n==== TEST SUMMARY ===="
+			println "Total tests: ${result.testCount}"
+			println "Passed     : ${result.successfulTestCount}"
+			println "Failed     : ${result.failedTestCount}"
+			println "Skipped    : ${result.skippedTestCount}"
+			println "======================"
+		}
+	}
 }
 
 jacoco{
