--- a/.github/workflows/1-test-project.yaml
+++ b/.github/workflows/1-test-project.yaml
@@ -6,6 +6,21 @@ jobs:
   build-run:
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_USER: test
+          POSTGRES_PASSWORD: testpass
+          POSTGRES_DB: test
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready -U test
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -29,23 +44,16 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle
 
-      - name: Start services via Docker Compose
-        run: |
-          cp .env-test .env
-          docker compose up -d
-          docker compose ps
-
-      - name: Wait for database to be ready
+      - name: Wait for Postgres to be ready
         run: |
           echo "Waiting for database..."
-          until docker exec $(docker ps -qf "name=postgres") \
-            pg_isready -U $POSTGRES_USER -d $POSTGRES_DB; do
+          until pg_isready -h localhost -p 5432 -U test; do
             sleep 2
           done
-        env:
-          POSTGRES_USER: test
-          POSTGRES_DB: test
-
 
       - name: Run unit tests
         run: ./gradlew test
+        env:
+          POSTGRES_USER: test
+          POSTGRES_PASSWORD: test123
+          POSTGRES_DB: test
