--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,7 @@
-spring.application.name=financialmanager
+spring.application.name=SaveMoney$lot
+spring.profiles.active=prod
+server.port=8080
 
-spring.datasource.url=jdbc:postgresql://${DATABASE_HOST:localhost}:${DATABASE_PORT:5432}/${DATABASE_DB:SaveMoneySlot}
-spring.datasource.username=${DATABASE_NAME}
-spring.datasource.password=${DATABASE_PASSWORD}
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.flyway.baseline-on-migrate=true
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.tags-sorter=alpha
 springdoc.swagger-ui.operations-sorter=alpha
