--- a/.github/workflows/1-test-project.yaml
+++ b/.github/workflows/1-test-project.yaml
@@ -14,7 +14,7 @@ jobs:
         run: cp .env-test .env
 
       - name: Start services via Docker Compose
-        run: docker compose up -d
+        run: docker compose --env-file .env-test up -d
 
       - name: Wait for Postgres to be ready
         env:
