--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/SaveMoneySlot_TEST
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://${DATABASE_HOST:localhost}:${DATABASE_PORT:5432}/${DATABASE_DB:SaveMoneySlot_TEST}
+spring.datasource.username=${DATABASE_NAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.flyway.baseline-on-migrate=true
