[FIX] Fix env variables for test

--- a/.env-test
+++ b/.env-test
@@ -1,5 +1,5 @@
 SECRET_KEY=testing //The secret key for jwt
-DATABASE_NAME=postgres
-DATABASE_PASSWORD=root
+DATABASE_NAME=test
+DATABASE_PASSWORD=test123
 DATABASE_DB=SaveMoneySlot_TEST
 JWT_ISSUER=test
